# TGJGE

./: CMakeLists.txt  LICENSE  README.md  makefile  out.txt  test  test.c
TGE/: TGE.hpp  design.hpp  info_text_window.cpp  init.cpp  main.cpp  main_loop.cpp  window.cpp
TGE/gui/: info_text_window.cpp  window.cpp
TGE/gui/element_interactions/: load_project.cpp
assets/: attribution-sfx.txt
doc/: API.md
screenshots/: 21-10-13-input-support.mkv  21-10.11-first-animated-sprite.mkv
shaders/: fragment.glsl  vertex.glsl
src/: 2D_object.c  2Dobject.c  TGJGE.h  TGJGE_internal.h  audio.c  frame_update.c  global.c  init.c  input.c  quit.c  shader.c  sprite_and_texture.c  text.c  time.c
